--- a/multi-module-web/pom.xml
+++ b/multi-module-web/pom.xml
@@ -18,6 +18,17 @@
             <artifactId>multi-module-service</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.6.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.6.1</version>
+        </dependency>
     </dependencies>
     <build>
         <!-- 为jar包取名 -->
