--- a/multi-module-common/pom.xml
+++ b/multi-module-common/pom.xml
@@ -65,6 +65,7 @@
             <groupId>com.google.collections</groupId>
             <artifactId>google-collections</artifactId>
             <version>1.0</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
