--- a/multi-module-web/pom.xml
+++ b/multi-module-web/pom.xml
@@ -18,6 +18,11 @@
             <artifactId>multi-module-service</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-all</artifactId>
+            <version>1.3.2</version>
+        </dependency>
     </dependencies>
     <build>
         <!-- 为jar包取名 -->
