--- a/pom.xml
+++ b/pom.xml
@@ -150,13 +150,28 @@
             <version>3.0.0</version>
         </dependency>
         <!--END 百度ECharts github地址：https://github.com/abel533/ECharts-->
+        <!-- tomcat 发布war需要-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+        </dependency>
+        <!-- shiro权限控制框架 -->
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-spring</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.18</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+        </dependency>
     </dependencies>
-    <!-- tomcat 发布war需要-->
-    <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-tomcat</artifactId>
-        <scope>provided</scope>
-    </dependency>
     <build>
         <plugins>
             <plugin>
@@ -167,8 +182,7 @@
                 <configuration><!-- 指定该Main Class为全局的唯一入口 -->
                     <mainClass>com.highcharts.Application</mainClass>
                     <layout>ZIP</layout>
-                    <fork>true</fork>
-                    <!-- 如果没有该项配置，肯定个devtools不会起作用，即应用不会restart -->
+                    <fork>true</fork><!-- 如果没有该项配置，肯定个devtools不会起作用，即应用不会restart -->
                 </configuration>
                 <executions>
                     <execution>
@@ -176,11 +190,20 @@
                             <goal>repackage</goal><!--可以把依赖的包都打包到生成的Jar包中-->
                         </goals>
                         <!--可以生成不含依赖包的不可执行Jar包-->
-                        <!-- configuration>
-                          <classifier>exec</classifier>
-                        </configuration> -->
+                        <configuration>
+                            <classifier>exec</classifier>
+                        </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.12.4</version>
+                <configuration>
+                    <forkMode>once</forkMode>
+                    <argLine>-Dfile.encoding=UTF-8</argLine>
+                </configuration>
             </plugin>
         </plugins>
     </build>
