修改主POM文件

--- a/multi-module-manager/pom.xml
+++ b/multi-module-manager/pom.xml
@@ -23,6 +23,15 @@
         <artifactId>multi-module-common</artifactId>
         <version>1.0-SNAPSHOT</version>
     </dependency>
+    <dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>javax.servlet-api</artifactId>
+    </dependency>
+    <!--配置jstl的支持-->
+    <dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>jstl</artifactId>
+    </dependency>
 </dependencies>
 
 </project>
