--- a/multi-module-mapper/pom.xml
+++ b/multi-module-mapper/pom.xml
@@ -17,6 +17,10 @@
         <artifactId>multi-module-pojo</artifactId>
         <version>1.0-SNAPSHOT</version>
     </dependency>
+    <dependency>
+        <groupId>org.mybatis.spring.boot</groupId>
+        <artifactId>mybatis-spring-boot-starter</artifactId>
+    </dependency>
 </dependencies>
 
 </project>
