--- a/multi-module-pojo/pom.xml
+++ b/multi-module-pojo/pom.xml
@@ -12,5 +12,12 @@
 
     <artifactId>multi-module-pojo</artifactId>
 
+<dependencies>
+<!--    <dependency>
+        <groupId>com.google.guava</groupId>
+        <artifactId>guava</artifactId>
+        <version>${guava}</version>
+    </dependency>-->
 
+</dependencies>
 </project>
