--- a/.coveralls.yml
+++ b/.coveralls.yml
@@ -1,2 +1,2 @@
-service_name: travis-ci
-repo_token: G5JdwsOQhviwDYNGEXQCQJuVNARIU8ujp
+service_name: travis-pro
+repo_token: nqMcEy4PN0KIKricOYK3Uu4N6K575K7X9
